updated localhost parameter and .env files

--- a/prod.env
+++ b/prod.env
@@ -5,7 +5,7 @@ LOCALHOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
-POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${LOCALHOST}:5432/${POSTGRES_DB}
+POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
 
 # POSTGREST
 PGRST_DB_URI=${POSTGRES_URL}
@@ -13,11 +13,11 @@ PGRST_DB_SCHEMA=api
 PGRST_DB_ANON_ROLE=api_role
 
 # OLLAMA
-OLLAMA_BASE_URL=http://${LOCALHOST}:11434
+OLLAMA_BASE_URL=http://ollama:11434
 
 # QDRANT
-QDRANT_BASE_URL=http://${LOCALHOST}:6333
+QDRANT_BASE_URL=http://qdrant:6333
 
 # LANGFLOW
-LANGFLOW_DATABASE_URL=postgresql://langflow:langflow@${LOCALHOST}:5432/langflow
+LANGFLOW_DATABASE_URL=postgresql://langflow:langflow@postgres:5432/langflow
 LANGFLOW_CONFIG_DIR=/app/langflow
