--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3.8'
 name: acp
 
 services:
@@ -14,7 +13,7 @@ services:
       - postgres
       - ollama
     volumes:
-      - langflow-data:/app/data # Persistent storage for Langflow data
+      - langflow_data:/app/data # Persistent storage for Langflow data
     networks:
       - acp
     user: "${UID:-0}:${GID:-0}" # This line aligns user/group IDs
@@ -34,7 +33,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - ./Postgres:/docker-entrypoint-initdb.d
-      - postgres-data:/var/lib/postgresql/data # Persistent storage for PostgreSQL data
+      - postgres_data:/var/lib/postgresql/data # Persistent storage for PostgreSQL data
     networks:
       - acp
     deploy:
@@ -61,13 +60,21 @@ services:
           cpus: '1.0'
           memory: 2G
 
+  swagger:
+    image: swaggerapi/swagger-ui
+    ports:
+      - "8080:8080"
+    environment:
+      API_URL: http://localhost:3000/
+
+
   qdrant:
     image: qdrant/qdrant:v1.15.2 # Or a specific version like v1.9.1
     ports:
       - "6333:6333" # Qdrant API port
       - "6334:6334" # Qdrant gRPC port
     volumes:
-      - qdrant-data:/qdrant/storage # Persist data outside the container
+      - qdrant_data:/qdrant/storage # Persist data outside the container
     networks:
       - acp
 
@@ -77,7 +84,7 @@ services:
     ports:
       - "11434:11434"
     volumes:
-      - ollama-data:/root/.ollama # Persistent storage for Ollama models
+      - ollama_data:/root/.ollama # Persistent storage for Ollama models
       - ./Ollama/entrypoint.sh:/entrypoint.sh
     networks:
       - acp
@@ -89,10 +96,10 @@ services:
     entrypoint: ["/usr/bin/bash", "/entrypoint.sh"]
 
 volumes:
-  langflow-data:
-  postgres-data:
-  ollama-data:
-  qdrant-data:
+  langflow_data:
+  postgres_data:
+  ollama_data:
+  qdrant_data:
 
 networks:
   acp:
